# Forensic-Project

./: README.md  app_fastapi.py  document_deskew.py  pyproject.toml  requirements.txt
