[tool.poetry]
name = "document-processor"
version = "0.1.0"
description = "A FastAPI app to deskew and crop document images."
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
opencv-python = "^4.10.0"
numpy = "^1.26.4"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"